fixing bugs
there was an overlaping issue whuch was dealt with adjusting the
padding and div heights

--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@ header {
     font-family: 'Courier New', Courier, monospace;
     background-color: #1f2937;
     color: #f9faf8;
-    min-height: 5vh;
-    padding: 20px;
+    height: 5vh;
 }
 
     .header {
@@ -21,7 +20,7 @@ header {
         padding-left: 20px;
         padding-right: 20px;
         padding-top: 20px;
-        padding-bottom: 0;
+        padding-bottom: 5px;
     }
 
     .headLogo {
@@ -66,7 +65,7 @@ header {
     height: 400px;
     background: #1f2937;
     justify-content: space-around;
-    padding: 20px;
+    padding: 0px;
 }
 
     .secLeft {
@@ -127,9 +126,9 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background: #f9faf8;
-    padding: 20px;
-
+    padding: 0px;
 }
 
     .infoText {
@@ -142,7 +141,6 @@ header {
         display: flex;
         flex-direction: row;
         gap: 100px;
-        padding: 20px;
         justify-content: space-evenly;
     }
 
